--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="NoBullshitDrinks" class="logo">
+        <img src="logo.png" alt="NoBullshitDrinks Logo" class="logo" onerror="this.style.display='none'">
     </header>
 
     <div class="container">
